Crash loading certain .exr file in compositor #101227
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#101227
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows 11 x64
Graphics card: gtx 650 ti
processor ryzen 9 5900X
Blender Version
Broken: tried 3.3 LTS (september 7, 2022 release) and also 3.2.1, but had this failure before in previous builds.
Short description
Blender immediately crashes after importing a multilayer .exr (generated in Houdini's Karma renderer) to the compositor. Example files attached
Exact steps for others to reproduce the error
Open new blender scene, switch to compositor tab and check "use nodes". Then the error happens after either dragging and dropping the images or using the image node for import.
The crash seems to occur only when importing images with AOVs packed in, I attached one example that works perfectly but only has the color layer. I know this is a niche workflow but I'm out of options for compositing until I can upgrade my graphics card, sorry if this isn't really worth looking into.
Added subscriber: @danconsole
Added subscriber: @mano-wii
Changed status from 'Needs Triage' to: 'Confirmed'
I can confirm the crash by dragging and dropping the image.
Other applications can read the image, so it seems to be a bug in Blender.
Perhaps related to the changes in
9d91bc38d3
.Added subscriber: @EAW
I was getting a crash using drag-and-drop, but it has been fixed, pressumedly by
fd2668a368
There is still another crash that occurs anytime Blender tries to create a preview icon of the multilayer file, according to the stacktrace.
To reproduce this, try to load the multilayer file in an image input node in the compositor.
Line 595 calls the int version of the Z-buffer, not the float version just below it at 599.
Blender reports the file format as a targa file with a size of (0 px, 0 px), and a resolution of (0.000, 0.000).
Multilayer according to exrinfo.exe 3.1.5
Multilayer file according to exrheader.exe 3.1.5
Single Layer according to exrheader.exe 3.1.5
Added subscriber: @Raimund58
Crash is still happening.
Nowadays it crashes in
imb_exr_split_channel_name
/imb_exr_split_token
when we get there with thedepth
channel of the depth part (EXR can have multiple "parts" -- from first glance, this is not really taken into account inimb_exr_multilayer_parse_channels_from_file
?)Not really sure what is supposed to happen in such case, found a comment :
NOTE : not using
imb_exr_multilayer_parse_channels_from_file
but instead using code marked with the following comment doesnt crash (but then again, image cannot be read properly then either... recognized as targa as mentioned above etc. this also happens when loading into the Image Editor)/* Read view and channels without parsing. */
There might be others more familiar with expectations here, so how do we translate an EXR with multiple parts into
layers -> passes -> channels
? Does every part get its own layer? Its own pass? Right now we seem to get a Combined pass with 10 channels from the EXR posted here...Since this is a crasher, will dare raising the prio here (of course it could be lowered gain if this is considered too much a corner case -- it does seem though that this is totally legit way of storing an EXR?)
Blender 3.3 crashes on importing external .exr file on compositorto Crash loading certain .exr file in compositorCC @brecht