Fix #101227: Crash and other issues with non-multiview multipart EXR

Some software stores passes or layers as parts. This case was not
supported by the OpenEXR reader yet.

Pull Request: https://projects.blender.org/blender/blender/pulls/118867